started working on classes; then I got distracted and sorta cleaned up the CSS file

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -1,27 +1,3 @@
-/*
-        Nord website background: 242933
-        Nord00: 2E3440
-        Nord01: 3B4252
-        Nord02: 434C5E
-        Nord03: 4C566A
-
-        Nord04: D8DEE9
-        Nord05: E5E9F0
-        Nord06: ECEFF4
-
-        Nord07: 8FBCBB
-        Nord08: 88C0D0
-        Nord09: 81A1C1
-        Nord10: 5E81AC
-
-        Nord11: BF616A
-        Nord12: D08770
-        Nord13: EBCB8B
-        Nord14: A3BE8C
-        Nord15: B48EAD
-*/
-
-/* STUFF */
 @font-face {
     font-family: "noto-sans";
     src: url("../fonts/NotoSansDisplay-VariableFont_wdth,wght.ttf") format(truetype);
@@ -61,145 +37,13 @@
     color: var(--nord-important);
 }
 
-/* ALL ELEMENTS */
-h1 {
-    font-size: 72px;
-    margin: 36px;
-}
-
-h2 {
-    font-size: 54px;
-    margin:27px;
-}
-
-h3 {
-    font-size: 40px;
-    margin:20px;
-}
-
-h4 {
-    font-size: 30px;
-    margin: 15px;
-}
-
-h5 {
-    font-size: 24px;
-    margin: 12px;
-}
-
-h6 {
-    font-size: 18px;
-    margin: 9px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    text-align: center;
-}
-
-p {
-    width: 100%;
-    margin: 0;
-}
-
-hr {
-    width: 100%;
-    color: var(--nord3);
-}
-
-blockquote {
-    margin: 1em 40px 1em 40px;
-    padding: 0px 12px;
-    background-color: var(--nord-inactive);
-    border-width: 0 0 0 8px;
-    border-color: var(--nord-active);
-    border-style: solid;
-    width: calc(100% - 80px)!important;
-}
-
-blockquote * {
-    text-align: left;
-}
-
-form {
-    width: 100%;
-}
-
-form {
-    font-size: 16px;
-}
-
 body {
     text-align: left;
     color: var(--nord-text);
     background-color: var(--nord-background);
     margin: 0;
-}
-
-button, input, select, textarea {
-    border-style: solid;
-    padding: 14px 16px;
-    text-align: left;
-    text-decoration: inline-block;
-    font-size: 16px;
-    margin: auto;
-    border-radius: 15px;
-    background-color: var(--nord-inactive);
-    color: var(--nord-important);
-    border-color: var(--nord3);
-    width: 100%;
-}
-
-button:hover, input[type=submit]:hover {
-    background-color: var(--nord-active);
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    cursor: pointer;
-}
-
-/*input[type=text], select {
-    border-style: none;
-    padding: 16px 32px;
-    text-decoration: inline-block;
-    font-size: 18px;
-    margin: 12px;
-    border-radius: 48px;
-    background-color: var(--nord-inactive);
-    color: var(--nord-important);
-}*/
-
-input[type=number] {
-    -moz-appearance: textfield;
-    appearance: textfield;
-}
-
-input[type=number]::-webkit-inner-spin-buttton, input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-}
-
-input, select {
-    box-sizing: border-box;
-    padding: 8px;
-}
-
-table {
-    margin: 12px;
-    padding:14px;
-}
-
-th {
-    font-size: 18px;
-    margin: 12px;
-    padding: 14px;
-}
-
-td {
-    font-size: 16px;
-    margin: 6px;
-    padding: 14px;
-}
-
-td a {
-    color: var(--nord-text);
-    text-decoration: none;
+    padding: auto;
+    height: 100%
 }
 
 footer,footer a {
@@ -218,286 +62,6 @@ template, template.vertical, template.horizontal {
     border: 0;
     margin: 0;
 }
-
-/*FLEX CONTAINERS */
-
-.flex {
-    display: flex;
-    background-color: var(--nord-canvas); 
-    align-content: space-around;
-    border-radius: 12px;
-    margin: 50px auto;
-    width: 75%;
-    align-items: flex-start;
-}
-
-.horizontal {
-    flex-flow: row wrap;
-    width: 100%;
-    margin: 25px;
-    align-items: center;
-}
-
-.vertical {
-    flex-flow: column nowrap;
-    width: 100%;
-    margin: 25px;
-    align-items: center;
-}
-
-.flex.center, .grid.center {
-    justify-content: center;
-}
-
-.flex.start, .grid.start {
-    justify-content: flex-start;
-}
-
-.flex.end, .grid.end {
-    justify-content: flex-end;
-}
-
-.flex.space-around, .grid-space-around {
-    justify-content: space-around;
-}
-
-.flex.space-between, .grid.space-between {
-    justify-content: space-between;
-}
-
-.flex.wide {
-    width: calc(100% - 100px)
-}
-
-.flex.narrow {
-    width: calc(35% + 100px);
-    max-width: calc(100% - 100px)
-}
-
-/* GRID CONTAINERS */
-.grid {
-    width: 100%;
-    background-color: var(--nord-inactive);
-    border-radius: 12px;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
-    gap: 12px;
-}
-
-.grid.space-evenly {
-    justify-content: space-evenly;
-}
-
-/* SPLASH TEXT */
-.splashText {
-    padding: 16px 32px;
-    text-align: center;
-    font-size: 24px;
-    margin: 12px;
-    color: var(--nord-text);
-    text-decoration: none;
-}
-
-.splashText:hover {
-    color: var(--nord-primary1);
-    cursor: pointer;
-}
-
-/* TABS */
-
-.tabs {
-    width: 15%;
-    border-radius: 12px;
-}
-
-.tab {
-    display: block;
-    background-color: var(--nord-inactive);
-    width: 100%;
-    padding: 14px;
-}
-.tab:hover {
-    background-color: var(--nord-active);
-    color: var(--nord-primary1);
-}
-
-.tab.active {
-    background-color: var(--nord-active);
-}
-
-.tab.active:hover {
-    background-color: var(--nord3);
-    color: var(--nord-text);
-}
-
-.tab-container {
-    width: 100%;
-    background-color: var(--nord-canvas)!important;
-}
-
-/* MODALS */
-
-.modal {
-    display: none; /*Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 3; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-}
-
-.modal-alert {
-    background-color: var(--nord-canvas);
-    padding: 20px;
-    position: fixed;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    border: 3px var(--nord-inactive);
-    width: 50%; /* Could be more or less, depending on screen size */
-    border-radius: 12px;
-    z-index: 4;
-}
-
-/* NAVBAR */
-
-.nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: var(--nord-inactive);
-    z-index: 2;
-}
-
-.nav-item {
-    float: left;
-}
-
-.nav-right {
-    float: right;
-    background-color: var(--nord-tertiary);
-}
-
-.nav-item a, .nav-right a, .dropbtn {
-    display: inline-block;
-    color: var(--nord-subtle);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.nav-item a:hover {
-    background-color: var(--nord-active);
-}
-
-.dropdown.active:hover .dropbtn {
-    background-color: var(--nord3);
-}
-
-.nav-right a:hover, .nav-item.nav-right a:hover {
-    background-color: var(--nord-secondary);
-    color: var(--nord-text);
-}
-
-.nav-right .dropdown-content a:hover {
-    background-color: var(--nord-active);
-}
-
-.nav-item.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: var(--nord-inactive);
-    min-width: 192px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: var(--nord-subtle);
-    padding: 14px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: var(--nord-active);
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.active, .active a {
-    background-color: var(--nord-active);
-}
-
-.active:hover, .active a:hover {
-    background-color: var(--nord3);
-}
-
-.nav-item a:hover, .small a:hover {
-    color: var(--nord-primary1);
-}
-
-.topbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: var(--nord-canvas);
-}
-
-.topbar li, .topbar li * {
-    float: left;
-    font-size: 16px;
-    border: none;
-    border-radius: 0;
-    width: auto;
-    background-color: var(--nord-canvas);
-}
-
-.topbar li * {
-    padding: 14px 16px;
-    margin: 0;
-}
-
-.topbar li *:hover {
-    background-color: var(--nord-inactive);
-}
-
-.topbar li.static *:hover {
-    background-color: var(--nord-canvas);
-}
-
-.topbar li select {
-    max-width: 100%
-}
-
-select.nav-item {
-    font-size: 16px;
-    margin: 0;
-    padding: 14px 16px;
-    border: none;
-    border-radius: 0;
-    display: inline-block;
-    width: auto;
-}
-
-select.nav-item:hover {
-    color: var(--nord-tertiary);
-    background-color: var(--nord-active);
-}
-
-/* MESSAGES */
 
 .red {
     background-color: var(--nord-red);
@@ -525,11 +89,21 @@ select.nav-item:hover {
 }
 
 /* TABLES */
+td {
+    font-size: 14px;
+}
+
+td a {
+    color: var(--nord-text);
+    text-decoration: none;
+}
 
 table, th, td {
     border: 1px solid var(--nord-active);
     background-color: var(--nord-inactive);
-    font-size: 14px;
+    border-collapse: collapse;
+    margin: 12px;
+    padding: 14px;
 }
 
 th {
@@ -538,129 +112,16 @@ th {
 
 table {
     padding: 0;
-    border-collapse: collapse;
     width: 100%;
-    border-radius: 12px;
 }
 
-/* OTHER SHIT*/
-
-
-a button {
-    margin: 12px;
-    text-align: center;
-    box-sizing: border-box;
-    width: auto;
-}
-
-.usercontent * {
-    width: 100%;
-    margin: 6px 0;
-}
-.usercontent table, .usercontent table * {
-    width: auto;
-}
-.usercontent blockquote * {
-    margin: 18px 0;
-}
-.usercontent {
-    width: 100%!important;
-}
-.usercontent h2, .usercontent h3, .usercontent h4, .usercontent h5, .usercontent h6 {
-    text-align: left;
-    width: 100%
-}
 
 div.wide-content * *, div.wide-content * {
     width: 100%
 }
 
-button.circle {
-    height: var(--size);
-    width: var(--size);
-    border-radius: 50%;
-}
-
-button.circle * {
-    position:  relative;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    text-align: center;
-    margin: auto;
-}
-
-button.danger {
-    background-color: var(--nord-dark-red);
-    border-color: var(--nord-red);
-}
-
-button.danger.mild {
-    background-color: var(--nord-red);
-    border-color: var(--nord-red);
-}
-
-/*form *, form a {
-    margin: auto;
-}*/
-
-form input, form textarea, form select, form button, form a {
-    margin: 12px;
-}
-
-textarea {
-    font-size: 16px;
-    max-width: calc(100% - 24px);
-    box-sizing: border-box;
-    resize: vertical;
-    height: 500px;
-}
-
-.code-editor {
-    width: 100%;
-    display: inline-flex;
-    gap: 0;
-    border-radius: 0px;
-    background-color: var(--nord-inactive);
-    height: auto;
-}
-
-.code-editor textarea {
-    resize: none;
-    font-family: monospace;
-    border-radius: 0;
-    padding: 0;
-    border: 0;
-    margin: 0;
-}
-
-.code-editor textarea:focus {
-    outline: none;
-}
-
-.code-editor .line-numbers {
-    width: 20px;
-    text-align: right;
-    background-color: var(--nord-active);
-    height: auto;
-}
-
-.code-editor .line-numbers span {
-    color: var(--nord-primary1);
-    width: 100%;
-    display: block;
-    font-family: monospace;
-}
-
 .inline {
     display: inline-block;
-}
-
-div.interior {
-    width: auto;
-    margin: 0;
-    padding: 0;
 }
 
 .small, .small * {
@@ -679,76 +140,4 @@ div.interior {
 a:hover, a:hover span {
     color: var(--nord-tertiary);
     cursor: pointer;
-}
-
-.chip {
-    padding: 5px 10px;
-    border-radius: 16.5px;
-    background-color: var(--nord-canvas);
-    margin: 5px;
-}
-
-.chip span {
-    padding: 0px 5px;
-    cursor: pointer;
-}
-
-.chip:hover span.remove {
-    color: var(--nord-red);
-    cursor: pointer
-}
-
-.chip:hover span:not(.remove) {
-    text-decoration: line-through;
-}
-
-@media only screen and (max-width: 900px) {
-    
-    h1 {
-        font-size: 36px;
-        margin: 18px;
-    }
-
-    h2 {
-        font-size: 32px;
-        margin:16px;
-    }
-
-    h3 {
-        font-size: 28px;
-        margin:14px;
-    }
-
-    h4 {
-        font-size: 24px;
-        margin: 12px;
-    }
-
-    h5 {
-        font-size: 20px;
-        margin: 10px;
-    }
-
-    h6 {
-        font-size: 16px;
-        margin: 8px;
-    }
-    .flex, .flex.wide, .flex.narrow {
-        margin: 0;
-        width: calc(100% - 24px);
-        border-radius: 0px!important;
-        padding: 12px;
-        flex-flow: column nowrap;
-        max-width: 100%;
-    }
-    .tabs {
-        padding: 0;
-    }
-    .topbar {
-        width: calc(100% - 4px);
-        border: 2px solid var(--nord-inactive);
-    }
-    .interior.flex.horizontal {
-        flex-flow: row wrap;
-    }
 }
