--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -10,7 +10,10 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/input.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/containers.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/ui.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/markdown.css') }}"
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/markdown.css') }}">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">	
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 	<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 	<script src="{{ url_for('static', filename='js/master.js') }}"></script>
