--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -17,6 +17,7 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 	<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 	<script src="{{ url_for('static', filename='js/master.js') }}"></script>
+	<title>{{ title }} | Wayfinder {{ cruleset.name }}</title>
 	{% block head %}{% endblock %}
 </head>
 
@@ -24,11 +25,7 @@
 <ul class="nav">
 	<li id="nav-home" class="nav-item"><a href="/">Home</a></li>
 	<li id="nav-rules" class="dropdown nav-item">
-		{% if cruleset.id == 1 %}
-			<a href="#" class="dropbtn">Rules</a>
-		{% else %}
-			<a href="/Rules" class="dropbtn">Rules</a>
-		{% endif %}
+		<a href="#" class="dropbtn">Rules</a>
 		<div class="dropdown-content">
 			{% for category in cruleset.categories %}
 			<a href="/Rules/{{ category.name.replace(' ', '-') }}">{{ category.name }}</a>
@@ -36,7 +33,7 @@
 		</div>
 	</li>
 	<li id="nav-char" class="dropdown nav-item">
-		<a href="/Character" class="dropbtn">Characters</a>
+		<a href="#" class="dropbtn">Characters</a>
 		<div class="dropdown-content">
 			<a href="/Character/Races">Races</a>
 			<a href="/Character/Backgrounds">Backgrounds</a>
@@ -47,7 +44,7 @@
 		</div>
 	</li>
 	<li id="nav-qref" class="dropdown nav-item">
-		<a href="/Reference">Reference</a>
+		<a href="#">Reference</a>
 		<div class="dropdown-content">
 			<a href="/Reference/Actions">Actions</a>
 			<a href="/Reference/Conditions">Conditions</a>
@@ -61,7 +58,7 @@
 		</div>
 	</li>
 	<li id="nav-tools" class="dropdown nav-item">
-		<a href="/Tools">Tools</a>
+		<a href="#">Tools</a>
 		<div class="dropdown-content">
 			<a href="/Tools/VTT">Virtual Tabletop</a>
 			<a href="/Tools/NPC-Gen">NPC Generator</a>
@@ -111,7 +108,7 @@
 			{% for ruleset in adminrulesets %}
 			<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
 			{% endfor %}
-			{% if current_user.id != adminrulesets[0].userid %}
+			{% if current_user.username != "admin" %}
 			{% for ruleset in user.rulesets %}
 			<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
 			{% endfor %}
