--- a/website/templates/tags.html
+++ b/website/templates/tags.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<script src="{{ url_for('static', filename='js/tags.js') }}"></script>
+<script src="{{ url_for('static', filename='js/showdown-only.js') }}"></script>
 {% endblock %}
 
 {% block body %}
