--- a/website/templates/actions.html
+++ b/website/templates/actions.html
@@ -2,7 +2,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<script src="{{ url_for('static', filename='js/actions.js') }}"></script>
+<script src="{{ url_for('static', filename='js/showdown-only.js') }}"></script>
 {% endblock %}
 
 {% block body %}
