--- a/website/templates/category.html
+++ b/website/templates/category.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="flex">
     <div class="flex vertical start">
-        <h1>{{ heading }}</h1>
+        <h1>{{ title }}</h1>
     </div>
 </div>
 <div class="wide flex" x-data="main">
