--- a/website/templates/skills.html
+++ b/website/templates/skills.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<script src="{{ url_for('static', filename='js/skills.js') }}"></script>
+<script src="{{ url_for('static', filename='js/showdown-only.js') }}"></script>
 {% endblock %}
 
 {% block body %}
