--- a/website/templates/stats.html
+++ b/website/templates/stats.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="flex">
-	<div class="flex vertical start">
+	<div class="flex vertical start" x-data="main">
 		<h1>Ability Scores</h1>
 		{% for score in cruleset.ability_scores %}
 		<div class="usercontent">
