--- a/website/templates/create-stat.html
+++ b/website/templates/create-stat.html
@@ -10,10 +10,7 @@
 		<h1>Create Ability Score</h1>
 		<form class="interior flex vertical start" method="post">
 			<input name="name" id="name" x-model="name" placeholder="Ability Score Name">
-			<div class="interior flex horizontal space-between" style="width: 100%; margin: 12px 0px">
-				<input name="abbr" id="abbr" x-model="abbr" placeholder="Ability Score Abbreviation" style="width: calc(50% - 24px); margin: 0">
-				<input name="numb" id="numb" x-model="numb" placeholder="Ability Score Number" style="width: calc(50% - 24px); margin: 0">
-			</div>
+			<input name="abbr" id="abbr" x-model="abbr" placeholder="Ability Score Abbreviation">
 			<textarea name="text" id="text" x-model="text" placeholder="Ability Score Description"></textarea>
 			<a><button type="submit">Create Ability Score!</button></a>
 		</form>
