--- a/website/static/css/ui.css
+++ b/website/static/css/ui.css
@@ -6,6 +6,14 @@
     background-color: var(--nord-inactive);
     z-index: 2;
 }
+.nav.transparent {
+    background-color: rgba(59, 66, 82, 0.33);
+}
+nav.fixed {
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
 
 .nav-item {
     float: left;
@@ -14,6 +22,9 @@
 .nav-right {
     float: right;
     background-color: var(--nord-tertiary);
+}
+.nav.transparent .nav-right {
+    background-color: rgba(94, 129, 172, 0.33)
 }
 
 .nav-item a, .nav-right a, .dropbtn {
@@ -27,18 +38,30 @@
 .nav-item a:hover {
     background-color: var(--nord-active);
 }
+.nav.transparent .nav-item a:hover {
+    background-color: rgba(67, 76, 94, 0.33);
+}
 
 .dropdown.active:hover .dropbtn {
     background-color: var(--nord3);
+}
+.nav.transparent .dropdown.active:hover .dropbtn {
+    background-color: rgba(76, 86, 106, 0.33);
 }
 
 .nav-right a:hover, .nav-item.nav-right a:hover {
     background-color: var(--nord-secondary);
     color: var(--nord-text);
 }
+.nav.transparent .nav-right a:hover, .nav.transparent .nav-item.nav-right a:hover {
+    background-color: rgba(129, 161, 193, 0.33);
+}
 
 .nav-right .dropdown-content a:hover {
     background-color: var(--nord-active);
+}
+.nav.transparent .nav-right .dropdown-content a:hover {
+    background-color: rgba(67, 76, 94, 0.33)
 }
 
 .nav-item.dropdown {
@@ -53,6 +76,9 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
+.nav.transparent .dropdown .dropdown-content {
+    background-color: rgba(59, 66, 82, 0.33)
+}
 
 .dropdown-content a {
     color: var(--nord-subtle);
@@ -65,6 +91,9 @@
 .dropdown-content a:hover {
     background-color: var(--nord-active);
 }
+.nav.transparent .dropdown .dropdown-content a:hover {
+    background-color: rgba(67, 76, 94, 0.33)
+}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -72,6 +101,9 @@
 
 .active, .active a {
     background-color: var(--nord-active);
+}
+.nav.transparent .active, .nav.transparent .active a {
+    background-color: rgba(67, 76, 94, 0.33);
 }
 
 .active:hover, .active a:hover {
